# UCCBEmbedded

./: .gitignore  CMakeLists.txt  stm32f042x6.cmake
Src/: main.c  system_stm32f0xx.c
Src/slcan/: slcan.c  slcan_additional.c
